2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclLoad.c: Changed the code so that if Tcl_StaticPackage
	is called to report the same package as being loaded in two interps,
	it shows up in [info loaded {}] in both of them (previously,
	it didn't appear in the static package list in the second.

	* tests/load.test Added regression test for the above bug.
	[Bug 670042]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclClock.c: Fixed a bug that incorrectly allowed
	[clock clicks {}] and [clock clicks -] to be accepted as if
	they were [clock clicks -milliseconds].
	
	* tests/clock.test: Added regression tests for the above bug.
	[Bug 675356]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* tests/unixNotfy.test: Added cleanup of working files
	[Bug 675609]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* doc/Tcl.n: Added headings to the eleven paragraphs, to improve
	formatting in the tools that attempt to extract tables of contents
	from the manual pages. [Bug 627455]

	* generic/tclClock.c: Expanded mutex protection around the setting
	of env(TZ) and the thread-unsafe call to tzset(). [Bug 656660]
	
2003-01-31  Don Porter  <dgp@users.sourceforge.net>

	* tests/tcltest.test: Cleaned up management of file/directory
	creation/deletion to improve "-debug 1" output.  [Bug 675614]
	The utility [slave] command failed to properly [list]-quote a
	constructed [open] command, causing failure when the pathname
	contained whitespace.  [Bug 678415]

	* tests/main.test: Stopped main.test from deleting existing file.
	Test suite should not delete files that already exist. [Bug 675660]

2003-01-28  Don Porter  <dgp@users.sourceforge.net>

	* tests/main.test: Constrain tests that do not work on Windows.
	[Bug 674387]

2003-01-28  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c: fix to setting modification date
	in TclCrossFilesystemCopy.  Also added 'panic' in 